refactor: 4.0 版本基础框架同步升级完成